src/test/ui/pattern/usefulness/match-privately-empty.stderr
error[E0004]: non-exhaustive patterns: `Some(Private { misc: true, .. })` not covered
  --> $DIR/match-privately-empty.rs:13:11
   |
LL |     match private::DATA {
   |           ^^^^^^^^^^^^^ pattern `Some(Private { misc: true, .. })` not covered
   |
note: `Option<Private>` defined here
  --> $SRC_DIR/core/src/option.rs:LL:COL
   |
LL | / pub enum Option<T> {
LL | |     /// No value.
LL | |     #[lang = "None"]
LL | |     #[stable(feature = "rust1", since = "1.0.0")]
...  |
LL | |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
   | |     ^^^^ not covered
LL | | }
   | |_-
   = note: the matched value is of type `Option<Private>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         }) => {}
LL +         Some(Private { misc: true, .. }) => todo!()
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
